# wikidump-parser

./: .gitignore  Cargo.toml  README.md  get.sh
parse_wiki_text/: Cargo.toml
parse_wiki_text/src/: line.rs  list.rs  parse.rs  state.rs  table.rs  tag.rs
src/: lib.rs  main.rs
