[package]
name = "wikipedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { path = "bzip2-rs", version = "0.4.4" }
html-escape = { path = "html-escape", version = "0.2.13" }
quick-xml = { path = "quick-xml", version = "0.35.0" }
parse_wiki_text = { path = "parse_wiki_text" }

[workspace]
members = [
  "parse_wiki_text",
  "quick-xml",
  "memchr",
  "bzip2-rs",
  "html-escape",
  "utf8-width",
  "libc"
]
